--- a/plugin.yaml
+++ b/plugin.yaml
@@ -1,7 +1,7 @@
 # Trivy plugin manifest <https://aquasecurity.github.io/trivy/v0.56/docs/plugin/developer-guide/>
 name: "vens"
 version: "0.1.0"
-repository: github.com/fahedouch/vens
+repository: github.com/venslabs/vens
 maintainer: fahedouch
 summary: Evaluate and prioritize vulnerabilities based on context
 description: |-
@@ -11,20 +11,20 @@ platforms:
   - selector:
       os: darwin
       arch: amd64
-    uri: https://github.com/fahedouch/vens/releases/download/v0.1.0/vens-v0.1.0.darwin-amd64.tar.gz
+    uri: ./vens
     bin: ./vens
   - selector:
       os: darwin
       arch: arm64
-    uri: https://github.com/fahedouch/vens/releases/download/v0.1.0/vens-v0.1.0.darwin-arm64.tar.gz
+    uri: ./vens
     bin: ./vens
   - selector:
       os: linux
       arch: amd64
-    uri: https://github.com/fahedouch/vens/releases/download/v0.1.0/vens-v0.1.0.linux-amd64.tar.gz
+    uri: ./vens
     bin: ./vens
   - selector:
       os: linux
       arch: arm64
-    uri: https://github.com/fahedouch/vens/releases/download/v0.1.0/vens-v0.1.0.linux-arm64.tar.gz
+    uri: ./vens
     bin: ./vens
