--- a/plugin.yaml
+++ b/plugin.yaml
@@ -11,20 +11,20 @@ platforms:
   - selector:
       os: darwin
       arch: amd64
-    uri: ./vens
+    uri: https://github.com/venslabs/vens/releases/download/v0.1.0/vens-v0.1.0-darwin-amd64.tar.gz
     bin: ./vens
   - selector:
       os: darwin
       arch: arm64
-    uri: ./vens
+    uri: https://github.com/venslabs/vens/releases/download/v0.1.0/vens-v0.1.0-darwin-arm64.tar.gz
     bin: ./vens
   - selector:
       os: linux
       arch: amd64
-    uri: ./vens
+    uri: https://github.com/venslabs/vens/releases/download/v0.1.0/vens-v0.1.0-linux-amd64.tar.gz
     bin: ./vens
   - selector:
       os: linux
       arch: arm64
-    uri: ./vens
+    uri: https://github.com/venslabs/vens/releases/download/v0.1.0/vens-v0.1.0-linux-arm64.tar.gz
     bin: ./vens
